Add endpoint to send verify email link and reset password
